# from-the-transistors

./: .gitignore  LICENSE  README.md
assembler/: README.md  cpu_test.s  hello_world.s  setup.cfg  test_file.s
assembler/pyas/: __init__.py  __main__.py  encoder.py  preprocess.py  pyas.py
assembler/pyas/instruction_formats/: __init__.py  branching.py  conditions.py  data_processing.py  load_store.py  utils.py
assembler/pyra/: __init__.py  pyra.py
assembler/tests/: context.py  test.py
compiler/: CMakeLists.txt
compiler/cutils/: CMakeLists.txt  cutils.md
compiler/cutils/include/cutils/: arrayi.h  cutils_unittest.h  set.h  string.h
compiler/cutils/src/: CMakeLists.txt  arrayi.c  set.c  string.c
compiler/cutils/tests/: CMakeLists.txt  test_arrayi.c  test_set.c  test_string.c
compiler/docs/: improvements.md  progress.md  scanner  scanner.md
compiler/scanner/: test_syntax_file.lang
compiler/scanner/include/scanner_utils/: fa.h  regex_analyzer.h  regex_parser.h  regex_scanner.h  regex_tree.h
compiler/scanner/src/: CMakeLists.txt  fa.c  generator.c  regex_analyzer.c  regex_parser.c  regex_scanner.c  regex_tree.c  scanner.c
compiler/tests/scanner/: CMakeLists.txt  test_regex_analyzer.c  test_regex_parser.c  test_regex_scanner.c  test_regex_tree.c  test_scanner_fa.c
compiler_sandbox/: run_test  test.c  tree.c
compiler_sandbox/archive/: fa.c
compiler_sandbox/cmake_cmocka_playground/: CMakeLists.txt  test.c
compiler_sandbox/cutils/: CMakeLists.txt  cmake.md  cutils.md
compiler_sandbox/cutils/include/cutils/: arrayi.h  common.h  cstring.h  cutils_unittest.h
compiler_sandbox/cutils/src/: CMakeLists.txt  arrayi.c  arrayi.h  cstring.c  cstring.h
compiler_sandbox/cutils/tests/: CMakeLists.txt  test_arrayi.c  test_cstring.c
compiler_sandbox/docs/: progress.md  scanner.md
compiler_sandbox/scanner/: array.h  genarray.h  regex.c  run  scanner.c  simple_fa.c  stack.h  string.h
compiler_sandbox/scanner/src/: scanner.c
cpu/: README.md  bootrom.s  cpu_design  program_fpga.py
cpu/src/: ALU.v  add32.v  address_inc.v  address_register.v  barrel_shifter.v  bram_spram.v  conditional_evaluator.v  cpu.v  fast_memory.v  imm_data_provider.v  instruction_decoder.v  logic_control.v  mclock_gen.v  mem_data_provider.v  memory.v  memory_mapper.v  mmio_mapper.v  pinky.v  reg_bank.v  sub32.v  uart_controller.v  uart_rx.v  uart_tx.v  write_data_register.v
uart_test/: uart.py
